2001-02-13  Tristan Tarrant  <nadir@users.sourceforge.net>
	* audio/xmidi.cc: cut & paste can be fatal :)
	  make sure that if chorus values are out of range we change them,
	  not reverb

2001-02-13  Tristan Tarrant  <nadir@users.sourceforge.net>
	* data/scaling_method.shp: new shape for menu entry
	* exultmenu.cc: implement choosing scaler from setup

2001-02-13  Tristan Tarrant  <nadir@users.sourceforge.net>
	* cheat.cc: when we postpone initialization of the cheat stuff,
	  really POSTPONE ALL initialization. This fixes a crash when
	  set_grabbed_actor() is invoked before finish_init().

2001-02-13  Tristan Tarrant  <nadir@users.sourceforge.net>
	* tools/ucdump.c: #include <string.h>
	* usecode/compiler/ucfun.cc: fixed cast problem

2001-02-12  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* lots-of-files: fixed warnings

2001-02-12  Ryan Nunn <triforce@merlin.net.au>
	* exult.cc : <SAVEGAME> default set to "."
	* fnames.h : SAVENAME change to "<SAVEGAME>/game%02d.u7"
	* game.cc : Removed U7chdir and replaced it with added the gamepath to
	  <STATIC>, <GAMEDAT>, and <SAVEGAME>
	* readnpcs.cc : Changed exception handling in read_schedules

2001-02-12  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* keys.h, imagewin/imagewin.h, usecode/intrinsics.cc: fixed warnings
	* cheat_screen.cc: include config.h
	* NEWS: fixed typos
	* gamewin.h: added a check for NULL shape data. (avoids sword crash)
	* txtscroll.cc: fixed unresponsiveness

2001-02-12  Ryan Nunn <triforce@merlin.net.au>
	* makefile.* : cheat_screen.cc
	* NEWS, exult.cc, imagewin/*.* : Multiple Scalers.
	* actors*.* : Polymorph debugging, Schedules Changing, Pick pocket
	* NEWS, cheat.*, key*.*, data/defaultkeys.txt : New cheats (cheat
	  screen, pick pocket, grab npc, npc number)
	* cheat_screen.* : Cheat screen for advanced options. Includes NPC
	  schedules changes, flag modifying, info, time rate/set. 
	* fnames.cc, gamedat.cc, readnpc.cc : Schedule.dat in GAMEDAT dir